do more with fewer tests

--- a/test.env
+++ b/test.env
@@ -1,14 +1,6 @@
-foo=bar
-first=line
-second=line=has=tons=of=equal=signs
-3=1
-
-
+foo=bar # asdf
 # some comment
-8=a b c d e f g h i j k l m n o p q r s t u v w x y z
-
+beep=boop with=equal=signs
 
 # lots of blank lines everywhere
-
-
 
