--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "minenv"
-version = "1.1.0"
-description = "access env vars, falling back to a sapecified .env file, in 50 lines of code instead of 1,500"
+version = "1.1.1"
+description = "use env files to store config, env vars override them, in 50 lines of code instead of 1,500"
 edition = "2024"
 license = "MIT"
 categories = ["config"]
